/*
 * © 2021. TU Dortmund University,
 * Institute of Energy Systems, Energy Efficiency and Energy Economics,
 * Research group Distribution grid planning and operation
*/
package edu.ie3.datamodel.models;

import static edu.ie3.datamodel.io.naming.EntityFieldNames.UUID_FIELD_NAME;
import static edu.ie3.datamodel.io.source.SourceValidator.*;

import java.io.Serializable;
import java.util.Objects;
import java.util.UUID;

/** Supplies every subclass with a generated UUID, making it unique */
public abstract class UniqueEntity implements Entity, Uniqueness, Serializable {

  private final UUID uuid;

  protected UniqueEntity() {
    uuid = UUID.randomUUID();
  }

  protected UniqueEntity(UUID uuid) {
    this.uuid = uuid == null ? UUID.randomUUID() : uuid;
  }

  @Override
  public UUID getUuid() {
    return uuid;
  }

  protected static Fields uniqueEntityFields() {
    return new Fields(UUID_FIELD_NAME);
  }

  @Override
  public boolean equals(Object o) {
    if (this == o) return true;
    if (o == null || getClass() != o.getClass()) return false;
    UniqueEntity that = (UniqueEntity) o;
    return uuid.equals(that.uuid);
  }

  @Override
  public int hashCode() {
    return Objects.hash(uuid);
  }

  @Override
  public String toString() {
    return "UniqueEntity{" + "uuid=" + uuid + '}';
  }

  /**
   * Abstract class for all builder that build child entities of abstract class {@link UniqueEntity}
   *
   * @version 0.1
   * @since 05.06.20
   */
  public abstract static class UniqueEntityCopyBuilder<B extends UniqueEntityBuilder>
      implements UniqueEntityBuilder {

    private UUID uuid;

    protected UniqueEntityCopyBuilder(UniqueEntity entity) {
      this.uuid = entity.getUuid();
    }

    public B uuid(UUID uuid) {
      this.uuid = uuid;
      return thisInstance();
    }

    protected UUID getUuid() {
      return uuid;
    }

    protected abstract B thisInstance();
  }

  protected interface UniqueEntityBuilder {

    UniqueEntity build();
  }
}
