/*
 * © 2020. TU Dortmund University,
 * Institute of Energy Systems, Energy Efficiency and Energy Economics,
 * Research group Distribution grid planning and operation
*/
package edu.ie3.models.input.system.characteristic;

import java.util.UUID;

public class EvCharacteristicInput extends AssetCharacteristicInput {

  /** @deprecated only added to remove compile error. Please implement a real constructor */
  @Deprecated
  public EvCharacteristicInput(UUID uuid, String type) {
    super(uuid, type);
  }

  // TODO please fill the void inside me :'(

}
